clusters/homelab/apps/glance/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: glance-strip-prefix
  namespace: glance
spec:
  stripPrefix:
    prefixes:
      - /
    forceSlash: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: glance-add-prefix-redirect
  namespace: glance
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Prefix: ""
