clusters/homelab/apps/glance/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: glance
  labels:
    app: glance
