clusters/homelab/apps/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
  labels:
    app: glance
spec:
  selector:
    app: glance
  ports:
  - port: 8080
    name: http
    targetPort: http
